Fix spacing, change font

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,5 @@
 html {
-  font-family: serif;
+  font-family: arial;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -95,7 +95,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: serif, serif;
+  font-family: arial, arial;
   font-size: 1em;
 }
 figure {
@@ -186,7 +186,7 @@ textarea {
   font: inherit;
 }
 html {
-  font: 120%/1.45em georgia, serif;
+  font: 120%/1.45em georgia, arial;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -201,7 +201,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: serif;
+  font-family: arial;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -231,7 +231,7 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: serif;
+  font-family: arial;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
@@ -247,7 +247,7 @@ h2 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: serif;
+  font-family: arial;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
@@ -263,7 +263,7 @@ h3 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: serif;
+  font-family: arial;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.38316rem;
@@ -279,7 +279,7 @@ h4 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: serif;
+  font-family: arial;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1rem;
@@ -295,7 +295,7 @@ h5 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: serif;
+  font-family: arial;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.85028rem;
@@ -311,7 +311,7 @@ h6 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: serif;
+  font-family: arial;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.78405rem;
@@ -587,7 +587,7 @@ tt,
 code {
   background-color: hsla(0, 0%, 0%, 0.04);
   border-radius: 3px;
-  font-family: serif;
+  font-family: arial;
   padding: 0;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
